// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slot bubblesVirtually false should subsume another slot by the same name 1`] = `
<div>
  <div
    data-position="first"
  />
  <div
    data-position="second"
  >
    Content
  </div>
</div>
`;

exports[`Slot bubblesVirtually false should subsume another slot by the same name 2`] = `
<div>
  <div
    data-position="first"
  />
  <div
    data-position="second"
  >
    Content
  </div>
</div>
`;

exports[`Slot bubblesVirtually false should unmount two slots with the same name 1`] = `
<div>
  <div
    data-position="first"
  />
  <div
    data-position="second"
  />
</div>
`;

exports[`Slot bubblesVirtually true should subsume another slot by the same name 1`] = `
<div>
  <div
    data-position="first"
  >
    <div />
  </div>
  <div
    data-position="second"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`Slot bubblesVirtually true should subsume another slot by the same name 2`] = `
<div>
  <div
    data-position="first"
  />
  <div
    data-position="second"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`Slot bubblesVirtually true should unmount two slots with the same name 1`] = `
<div>
  <div
    data-position="first"
  />
  <div
    data-position="second"
  />
</div>
`;

exports[`Slot should re-render Slot when not bubbling virtually 1`] = `
<div>
  <div>
    1
  </div>
  <button
    type="button"
  />
</div>
`;

exports[`Slot should re-render Slot when not bubbling virtually 2`] = `
<div>
  <div>
    2
  </div>
  <button
    type="button"
  />
</div>
`;

exports[`Slot should render a Fill containing an array 1`] = `
<div>
  <div>
    <span />
    <div />
    text
  </div>
</div>
`;

exports[`Slot should render a Fill containing an element 1`] = `
<div>
  <div>
    <span />
  </div>
</div>
`;

exports[`Slot should render a string Fill 1`] = `
<div>
  <div>
    content
  </div>
</div>
`;

exports[`Slot should render a string Fill with HTML wrapper when render props used 1`] = `
<div>
  <div>
    <blockquote>
      content
    </blockquote>
  </div>
</div>
`;

exports[`Slot should render empty Fills 1`] = `
<div>
  <div />
</div>
`;

exports[`Slot should render empty Fills without HTML wrapper when render props used 1`] = `
<div>
  <div />
</div>
`;

exports[`Slot should render in expected order when fills always mounted 1`] = `
<div>
  <div>
    first (rerendered)
    second
    third
    fourth (new)
  </div>
</div>
`;

exports[`Slot should render in expected order when fills unmounted 1`] = `
<div>
  <div>
    second
    third
    first (rerendered)
    fourth (new)
  </div>
  <button
    type="button"
  />
  <button
    type="button"
  />
  <button
    type="button"
  />
  <button
    type="button"
  />
</div>
`;

exports[`Slot should warn without a Provider 1`] = `
<div>
  <div>
    <div />
  </div>
</div>
`;
